--- a/ur5_pick_moveit_config/package.xml
+++ b/ur5_pick_moveit_config/package.xml
@@ -3,7 +3,7 @@
   <name>ur5_pick_moveit_config</name>
   <version>0.3.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the ur5_hitbot_with_ilc_platform with the MoveIt! Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the ur5_pick with the MoveIt! Motion Planning Framework
   </description>
   <author email="portgasray@163.com">lei</author>
   <maintainer email="portgasray@163.com">lei</maintainer>
@@ -27,8 +27,8 @@
   <run_depend>xacro</run_depend>
   <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
   <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
-  <build_depend>urdf_tutorial</build_depend>
-  <run_depend>urdf_tutorial</run_depend>
+  <build_depend>ur5_description</build_depend>
+  <run_depend>ur5_description</run_depend>
 
 
 </package>
