--- a/ur5_vision_pick/ur5_grasping/CMakeLists.txt
+++ b/ur5_vision_pick/ur5_grasping/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(OpenCV REQUIRED)
 add_message_files(FILES Tracker.msg)
 generate_messages(DEPENDENCIES std_msgs)
 
-include_directories(include ${catkin_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} )
 
 catkin_package()
 
@@ -27,17 +27,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(realsense2_DIR )
 
 
-# target_include_directories(${PROJECT_NAME}
-#   PRIVATE ${realsense2_INCLUDE_DIR})
 ## Declare a C++ library
-# add_library(visonManager src/vision_manager.cpp)
+add_library(visonManager src/vision_manager.cpp)
 
-# target_link_libraries(visonManager ${OpenCV_LIBS})
+target_link_libraries(visonManager ${OpenCV_LIBS})
 
 # Declare the executable, along with its source files.
-# add_executable(graspingDemo src/grasping_demo.cpp)
+add_executable(graspingDemo src/grasping_demo.cpp)
 
 # Specify libraries against which to link.
-# target_link_libraries(graspingDemo visonManager ${catkin_LIBRARIES})
+target_link_libraries(graspingDemo visonManager ${catkin_LIBRARIES})
 # add_executable(eye_to_hand src/eye_to_hand.cpp)
 # target_link_libraries(eye_to_hand ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenCV_LIBS})
